# gestion_costos_operativos

./: .gitignore  README.md  pyproject.toml
Prueba tecnica Senior/data/: X.csv  Y.csv  Z.csv
architecture/: aws_architecture.drawio
notebooks/: 01_eda.ipynb  02_feature_selection.ipynb  03_modeling_forecasting.ipynb
reports/: informe.md
results/: forecasts.json  selected_features.json
src/: agent.py  data_loader.py
