[project]
name = "dataknow-equipment-forecast"
version = "0.1.0"
description = "Modelo predictivo de costos de equipos de construcción a partir de precios de materias primas"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "pmdarima>=2.0",
    "python-dotenv>=1.0",
    "streamlit>=1.35",
    "holidays>=0.94",
    "google-genai>=1.73.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "black>=24.0",
    "ruff>=0.4",
]

[project.scripts]
agent = "src.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
